--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,13 @@ HOST=0.0.0.0
 NODE_ENV=development
 APP_KEY=bajOsrnUixuJhNFq-WtX_zinAJV87Y9g
 DRIVE_DISK=local
+DB_CONNECTION=pg
+PG_HOST=localhost
+PG_PORT=5432
+PG_USER=lucid
+PG_PASSWORD=
+PG_DB_NAME=lucid
+REDIS_CONNECTION=local
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_PASSWORD=
