--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@adonisjs/assembler": "^5.0.0",
+    "@types/uuid": "^8.3.1",
     "adonis-preset-ts": "^2.1.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
@@ -23,10 +24,17 @@
     "youch-terminal": "^1.1.1"
   },
   "dependencies": {
+    "@adonisjs/auth": "^8.0.9",
     "@adonisjs/core": "^5.3.0",
+    "@adonisjs/lucid": "^16.0.2",
+    "@adonisjs/redis": "^7.0.9",
     "@adonisjs/repl": "^3.1.0",
+    "luxon": "^2.0.2",
+    "pg": "^8.7.1",
+    "phc-argon2": "^1.1.2",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.20"
+    "source-map-support": "^0.5.20",
+    "uuid": "^8.3.2"
   }
 }
