chore: heroku setup

--- a/.env.example
+++ b/.env.example
@@ -12,5 +12,6 @@ PG_DB_NAME=lucid
 REDIS_CONNECTION=local
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
+REDIS_USERNAME=
 REDIS_PASSWORD=
 JWT_EXPIRES_IN=1hour
