--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,8 @@ REDIS_PORT=6379
 REDIS_USERNAME=
 REDIS_PASSWORD=
 JWT_EXPIRES_IN=1hour
+S3_KEY=dummyKey
+S3_SECRET=dummySecret
+S3_BUCKET=dummyBucket
+S3_REGION=dummyRegion
+S3_ENDPOINT=dummyEndpoint
