--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@adonisjs/auth": "^8.0.10",
     "@adonisjs/core": "^5.4.2",
+    "@adonisjs/drive-s3": "^1.0.5",
     "@adonisjs/lucid": "^16.3.2",
     "@adonisjs/redis": "^7.1.0",
     "@adonisjs/repl": "^3.1.8",
